--- a/fitoControl.UI/src/view/ArticuloView.form
+++ b/fitoControl.UI/src/view/ArticuloView.form
@@ -256,9 +256,11 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBoxMarcas">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxMarcasActionPerformed"/>
-          </Events>
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="0"/>
+            </Property>
+          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Marca&gt;"/>
           </AuxValues>
