--- a/fitoControl.UI/src/view/MarcaView.form
+++ b/fitoControl.UI/src/view/MarcaView.form
@@ -187,8 +187,8 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="jTableMarcas">
               <Properties>
-                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="0" rowCount="0"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Default Cursor"/>
                 </Property>
               </Properties>
               <Events>
